objects/Case.object
<CustomObject>
    <fields>
        <fullName>Source1__c</fullName>
        <label>Source1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>